feat(users): add admin user management RFG-80
